samples/_failures_safe/1761605103_3cf4f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d000d5f8.c: In function ‘main’:
./samples/SAFE/__tmp_d000d5f8.c:177:12: error: missing terminating " character
  177 |     printf("Enter expression to tokenize
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d000d5f8.c:177:5: error: expected expression at end of input
  177 |     printf("Enter expression to tokenize
      |     ^~~~~~
./samples/SAFE/__tmp_d000d5f8.c:177:5: error: expected declaration or statement at end of input
